[package]
name = "askshell"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9.4"
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0.117"
dirs = "5.0.1"
